--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "PhaserES6Webpack",
+  "name": "TizenPhaserGameWrapper",
   "version": "1.0.0",
   "description": "",
-  "author": "leandro cabrera <leandcabrera@gmail.com>",
+  "author": "rey aleonar",
   "main": "index.js",
   "scripts": {
     "dev": "webpack",
